Fix collapsable area bug
Make collapsable area hug the table title with chevron

--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,7 @@ button:hover {
 	border: none;
 	font-size: inherit;
 	font-weight: inherit;
-	cursor: pointer;
 	padding: 0;
-	width: 100%;
 	text-align: inherit;
 	gap: 0;
 }
@@ -50,12 +48,12 @@ button:hover {
 	justify-content: center;
 	width: fit-content;
 	padding-top: 1rem;
-	flex: 1;
 	text-align: center;
 	font-size: 1.5em;
 	font-weight: 400;
 	color: rgba(255, 255, 255, 0.87);
 	gap: 0.5em;
+	cursor: pointer;
 }
 
 @media (prefers-color-scheme: light) {
